--- a/_config.yml
+++ b/_config.yml
@@ -16,23 +16,23 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko_KR"   # 블로그의 주 언어입니다.
-title                    : "공부 좀 하자" # 사이트 탭에서 보이는 이름입니다.
-title_separator          : "-"
-subtitle                 : "Version 0.1"# site tagline that appears below site title in masthead
+title                    : "공부 하자" # 사이트 탭에서 보이는 이름입니다.
+title_separator          : "|"
+subtitle                 : "Version 0.1" # site tagline that appears below site title in masthead
 name                     : "제현준(Je Hyeonjun)"  
-description              : "An amazing website."
+description              : "Hyeonjun의 블로그입니다."
 url                      : "https://hyeonjunje.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"    # 폴백(예기치 못한 오류)일 때 연결되는 url 입니다.
 repository               : "https://github.com/hyeonjunje/hyeonjunje.github.io" # Github Repo url 입니다.
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-# breadcrumbs            : false # true, false (default)
+breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
+  provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
-    shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : "Hyeonjun" # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -281,9 +281,10 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
+      show_date: true
   # _pages                      : 해당 하단 영역이 새로 추가되었습니다.
   - scope:
       path: "_pages"
@@ -291,3 +292,5 @@ defaults:
     values:
       layout: single
       author_profile: true
+
+date_format: "%Y"
