toc_sticky, 이미지 오류 해결

--- a/_config.yml
+++ b/_config.yml
@@ -267,6 +267,12 @@ defaults:
       share: true
       related: true
       show_date: true
+      toc: true
+      toc_sticky: true
+      toc_label: 목차
+      author_profile: false
+      sidebar:      # 왼쪽 사이드 바
+          nav: "docs"
   # _pages                      : 해당 하단 영역이 새로 추가되었습니다.
   - scope:
       path: "_pages"
