사이드바 카테고리 & 태그 숫자 카운트 추가

--- a/_config.yml
+++ b/_config.yml
@@ -272,7 +272,7 @@ defaults:
       toc_label: "목차"
       author_profile: false
       sidebar:
-          nav: "docs"
+          nav: "counts"
   # _pages                      : 해당 하단 영역이 새로 추가되었습니다.
   - scope:
       path: ""
