--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ counts:
   - title: "카테고리"
     use: true
   - title: "태그"
-    use: true
+    use: false
 
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
